--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,8 +51,30 @@ h6{
   line-height: 1.1;
 }
 
+h1 {
+  font-size: 2.25rem;
+}
+h2 {
+  font-size: 1.875rem;
+}
+h3 {
+  font-size: 1.5rem;
+}
+h4 {
+  font-size: 1.25rem;
+}
+h5 {
+  font-size: 1rem;
+}
+h6 {
+  font-size: 0.875rem;
+}
+
 p {
   font-family: var(--font-roboto);
+}
+i {
+  font-style: italic;
 }
 
 @layer base {
