--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -150,6 +150,16 @@ i {
   body {
     @apply bg-ucademy-gray dark:bg-ucademy-grayDarkest;
   }
+  blockquote {
+  font-style: italic;
+  @apply border-l-4 border-solid border-ucademy-primary bg-pink-50 dark:bg-pink-900 text-pink-900 dark:text-pink-50;
+  padding-left: 1rem;
+  padding: 10px 20px;
+  margin: 1rem 0;
+  display: block;
+
+}
+
 }
 
 
